--- a/petclinicbackend/docker-compose.override.yml
+++ b/petclinicbackend/docker-compose.override.yml
@@ -13,3 +13,10 @@ services:
     ports:
       - "80"
 
+
+  testapplication:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+    ports:
+      - "80"
+
