--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -15,6 +15,16 @@ steps:
   env:
     - 'CLOUDSDK_COMPUTE_ZONE=us-central1-a'
     - 'CLOUDSDK_CONTAINER_CLUSTER=pet-clinic-backend-cluster'
+    
+- name: 'gcr.io/cloud-builders/kubectl'
+  args:
+    - 'apply'
+    - '-f'
+    - 'service_backend.yaml'
+
+  env:
+    - 'CLOUDSDK_COMPUTE_ZONE=us-central1-a'
+    - 'CLOUDSDK_CONTAINER_CLUSTER=pet-clinic-backend-cluster'
 
 images:
 - 'gcr.io/$PROJECT_ID/petclinic-restservice'
