--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,10 +1,10 @@
 steps:
 
 - name: 'gcr.io/cloud-builders/docker'
-  args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/petclinic-restservice:$REVISION_ID', './petclinicbackend/customerservice' ]
+  args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/petclinic-restservice', './petclinicbackend/customerservice' ]
 
 - name: 'gcr.io/cloud-builders/docker'
-  args: ["push", "gcr.io/$PROJECT_ID/petclinic-restservice:$REVISION_ID"]
+  args: ["push", "gcr.io/$PROJECT_ID/petclinic-restservice"]
 
 - name: 'gcr.io/cloud-builders/kubectl'
   args:
