updated sql proxy server ip

--- a/petclinicbackend/customerservice/appsettings.json
+++ b/petclinicbackend/customerservice/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "ProviderName=Microsoft.Data.SqLite;Application Name=Service;Data Source=DELMW51370\\SQLSERVER2014;Initial Catalog=petclinic;Integrated Security=True;Connection Timeout=120;MultipleActiveResultSets=True;",
-    "DefaultConnectionMySql": "ProviderName=MySql.Data;Server=localhost;Database=petclinic;Uid=root;Pwd=password1;port=3306;",
+    "DefaultConnectionMySql": "ProviderName=MySql.Data;Server=127.0.0.1;Database=petclinic;Uid=root;Pwd=password1;port=3306;",
     "CloudSqlProjectID": "petclinicproject-237509"
   },
   "DataProvider": "MySQL",
