--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -20,7 +20,7 @@ steps:
   args:
     - 'apply'
     - '-f'
-    - 'deployment_service.yaml'
+    - 'service_backend.yaml'
 
   env:
     - 'CLOUDSDK_COMPUTE_ZONE=us-central1-a'
