--- a/deployment_frontend.yaml
+++ b/deployment_frontend.yaml
@@ -11,7 +11,7 @@ spec:
     spec:
       containers:
       - name: angular-app
-        image: gcr.io/petclinicproject-237509/petclinicfrontend:v1
+        image: gcr.io/petclinicproject-237509/petclinicfrontend:
         ports:
         - containerPort: 80
           protocol: TCP
