--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,6 +5,12 @@ steps:
 
 - name: 'gcr.io/cloud-builders/docker'
   args: ["push", "gcr.io/$PROJECT_ID/petclinic-restservice"]
+  
+  - name: 'gcr.io/cloud-builders/docker'
+  args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/petclinic-frontend', './petclinicfrontend' ]
+
+- name: 'gcr.io/cloud-builders/docker'
+  args: ["push", "gcr.io/$PROJECT_ID/petclinic-frontend"]
 
 - name: 'gcr.io/cloud-builders/kubectl'
   args:
@@ -26,5 +32,16 @@ steps:
     - 'CLOUDSDK_COMPUTE_ZONE=us-central1-a'
     - 'CLOUDSDK_CONTAINER_CLUSTER=pet-clinic-backend-cluster'
     
+- name: 'gcr.io/cloud-builders/kubectl'
+  args:
+    - 'apply'
+    - '-f'
+    - 'deployment_frontend.yaml'
+
+  env:
+    - 'CLOUDSDK_COMPUTE_ZONE=us-central1-a'
+    - 'CLOUDSDK_CONTAINER_CLUSTER=pet-clinic-frontend-cluster'
+    
 images:
 - 'gcr.io/$PROJECT_ID/petclinic-restservice'
+- 'gcr.io/$PROJECT_ID/petclinic-frontend'
