--- a/service_backend.yaml
+++ b/service_backend.yaml
@@ -7,8 +7,7 @@ metadata:
   namespace: default
 spec:
   ports:
-  - nodePort: 31596
-    port: 80
+  - port: 80
     protocol: TCP
     targetPort: 80
   selector:
@@ -19,4 +18,4 @@ spec:
 status:
   loadBalancer:
     ingress:
-    - ip: 34.73.122.77
+    - ip: 34.66.71.222
