--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,21 @@
+
+  
 language: csharp
-
-services:
-  - docker
-
-before_install:
-  - docker build -t petclinicbackendservice petclinicbackend/customerservice
+sudo: required
+dist: trusty
+mono: none
+dotnet: 1.0.0-preview2-003131
+install:
+  - export DOTNET_CLI_TELEMETRY_OPTOUT=1
+before_script:
+  - chmod a+x ./build.sh
+  - chmod a+x ./deploy.sh
+script:
+  - ./build.sh
+deploy:
+  - provider: script
+    script: ./deploy.sh $TRAVIS_TAG $DOCKER_USERNAME $DOCKER_PASSWORD
+    skip_cleanup: true
+    on:
+      tags: true
  
