--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,3 @@
-
-  
 language: csharp
 sudo: required
 dist: trusty
@@ -14,7 +12,7 @@ script:
   - ./build.sh
 deploy:
   - provider: script
-    script: ./deploy.sh $TRAVIS_TAG $DOCKER_USERNAME $DOCKER_PASSWORD
+    script: ./deploy.sh $TRAVIS_TAG
     skip_cleanup: true
     on:
       tags: true
