--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ dotnet: 2.1.502
 install:
   - export DOTNET_CLI_TELEMETRY_OPTOUT=1
 before_script:
-  - chmod a+x ./build.sh
+  - chmod a+x petclinicbackend/customerservice/build.sh
   - chmod a+x ./deploy.sh
 script:
-  - ./build.sh
+  - petclinicbackend/customerservice/build.sh
 deploy:
   - provider: script
     script: ./deploy.sh $TRAVIS_TAG
