--- a/deployment_final.yaml
+++ b/deployment_final.yaml
@@ -18,6 +18,11 @@ spec:
         ports:
         - containerPort: 80
           protocol: TCP
+        volumeMounts
+        - name : backend-configmap
+          mountPath: /app/appsettings.json
+          readOnly: true
+          subPath: appsettings.json
       - command:
         - /cloud_sql_proxy
         - -instances=certificationproject-238515:us-central1:petclininc-instance-1=tcp:3307
@@ -32,3 +37,6 @@ spec:
       - name: cloudsql-instance-credentials
         secret:
           secretName: credentials
+      - name: backend-configmap
+        configmap:
+          name: backendconfig
