--- a/sqlserverdeployment.yaml
+++ b/sqlserverdeployment.yaml
@@ -1,10 +1,32 @@
-kind: PersistentVolumeClaim
-apiVersion: v1
+apiVersion: apps/v1beta1
+kind: Deployment
 metadata:
-  name: mssql-data-claim
+  name: mssql-deployment
 spec:
-  accessModes:
-  - ReadWriteOnce
-  resources:
-   requests:
-    storage: 2Gi
+  replicas: 1
+  template:
+    metadata:
+      labels:
+        app: mssql
+    spec:
+      terminationGracePeriodSeconds: 10
+      containers:
+      - name: mssql
+        image: microsoft/mssql-server-linux
+        ports:
+        - containerPort: 1433
+        env:
+        - name: ACCEPT_EULA
+          value: "Y"
+        - name: SA_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: mssql
+              key: SA_PASSWORD
+        volumeMounts:
+        - name: mssql-persistent-storage
+          mountPath: /var/opt/mssql
+      volumes:
+      - name: mssql-persistent-storage
+        persistentVolumeClaim:
+          claimName: mssql-data-claim
